--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 </head>
 
 <body>
-<form>
+<form action="https://api.sheetmonkey.io/form/pmo35vhXH4MEwFEFjszG55" method="POST">
 <h1>Salvar dados na planilha</h1>
+	<label for="name">
+Nome:		<input type="text" id="name" name="name"/>
+	</label>
 	
+	<label for="email">
+		Email:
+		<input type="email" id="email" name="email">
+	</label>
+	<label for="password">
+		Senha: <input type="password" id="password" name="senha">
+	</label>
+	<button type="submit">Enviar</button>
+
 </form>
 	
 	<script src="script.js"></script>
